# chepp

./: CMakeLists.txt  main.cpp
include/: bitboard.h  board.h  enums.h  piece_masks.h  utils.h
include/board/: bitboard.h  enums.h  move.h
include/magic/: magic_constatns.h
include/pieces/: masks.h  nonsliding.h  pawn.h  sliding.h
include/utils/: utils.h
src/: bitboard.cpp  board.cpp  magic_generator.cpp  main.cpp  utils.cpp
src/board/: bitboard.cpp  board.cpp
src/magic/: magic_generator.cpp
src/pieces/: nonsliding.cpp  pawn.cpp
src/utils/: utils.cpp
